<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:descendantFocusability="blocksDescendants"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/flowers_image"
        android:layout_width="82dp"
        android:layout_height="82dp"
        android:scaleType="centerCrop"
        tools:src="@drawable/thumbnail_tulips" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginLeft="8dp"
        android:layout_weight="4"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/flowers_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ellipsize="end"
                android:gravity="bottom"
                android:maxLines="1"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="#000000"
                tools:text="Flower Name" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:fontFamily="sens-serif-medium"
                android:text="@string/quantity_list_item"
                android:textAppearance="?android:textAppearanceSmall" />

            <TextView
                android:id="@+id/flowers_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:fontFamily="sens-serif-medium"
                android:textAppearance="?android:textAppearanceSmall"
                tools:text="7" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="top"
                android:fontFamily="sens-serif-medium"
                android:text="@string/price_list_item"
                android:textAppearance="?android:textAppearanceSmall" />

            <TextView
                android:id="@+id/flowers_price"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="top"
                android:ellipsize="end"
                android:fontFamily="sens-serif-medium"
                android:maxLines="1"
                android:textAppearance="?android:textAppearanceSmall"
                tools:text="25$" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/sold_button"
            style="@style/ListItemButtons"
            android:text="@string/quantity_button" />

        <Button
            android:id="@+id/sale_button"
            style="@style/ListItemButtons"
            tools:text="-95%" />

    </LinearLayout>
</LinearLayout>